update entitites and tests